# Chip8-curses

./: .gitignore  CMakeLists.txt
src/: Chip8State.c  Chip8State.h  decoder.c  decoder.h  main.c
